# omptest

./: CMakeLists.txt  LICENSE  README.md  ex.cu  kek.txt  kek2.txt  main.c  test.cu
